Working implementation with Java 11 and spigot api 1.13