@@ -17,7 +17,7 @@ public class GetLocationCommand implements CommandExecutor {
     @Override
     public boolean onCommand(CommandSender sender, Command command, String label, String[] args) {
         ServerLocator.LocationData locationData = plugin.getLocationData();
-        String message = "Location used for weather data is (%.3f, %.3f)".formatted(locationData.latitude, locationData.longitude);
+        String message = String.format("Location used for weather data is (%.3f, %.3f)", locationData.latitude, locationData.longitude);
         if (sender instanceof Player) {
             Player player = (Player) sender;
             player.sendMessage(ChatColor.AQUA + message);
